center text with text-align

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -3,9 +3,5 @@ div {
     background-color: red;
     font-size: 32px;
     font-weight: bold;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
