--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,13 +1,13 @@
 p {
-    font-family: "Verdana", "DejaVu Sans", sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
-.salmon {
+.odd {
     background-color: #fa8f73;
 
 }
 
-.salmon.bold {
+.odd.bold {
     font-weight: 700;
     font-size: 24px;
 }
